[package]
name = "chopsticks-executor"
version = "0.5.10"
description = "Chopsticks executor"
repository = "https://github.com/AcalaNetwork/chopsticks"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
arrayvec = "0.7.2"
getrandom = { version = "0.2", default-features = false, features = ["js"] }
serde = { version = "1.0.151", default-features = false }
serde_json = { version = "1.0", default-features = false }
hex = { version = "0.4.3", default-features = false }
hex-literal = "0.3.4"
wasm-bindgen = "0.2.83"
serde-wasm-bindgen = "0.4.5"
wasm-bindgen-futures = "0.4.33"
js-sys = "0.3.60"
log = "0.4.17"
console_error_panic_hook = "0.1.7"
console_log = { version = "0.2.0", optional = true }

smoldot = { path = '../vendor/smoldot/lib', default-features = false }

[features]
default = []
std = [
    "smoldot/std"
]
logging = [
	"console_log"
]

[profile.release]
codegen-units = 1
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
