[package]
name = "chopsticks-executor"
version = "0.0.0" # DO NOT CHANGE
description = "Chopsticks executor"
repository = "https://github.com/AcalaNetwork/chopsticks"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
arrayvec = "0.7"
getrandom = { version = "0.2", default-features = false, features = ["js"] }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
hex = { version = "0.4.3", default-features = false }
hex-literal = "0.4.1"
wasm-bindgen = "0.2.87"
serde-wasm-bindgen = "0.6.3"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
log = "0.4"
console_error_panic_hook = "0.1"
console_log = { version = "1.0" }

smoldot = { path = '../vendor/smoldot/lib', default-features = false }

[features]
default = []
std = ["smoldot/std"]

[profile.release]
codegen-units = 1
lto = true
