[package]
name = "chopsticks-executor"
version = "0.0.0" # DO NOT CHANGE
description = "Chopsticks executor"
repository = "https://github.com/AcalaNetwork/chopsticks"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
arrayvec = "0.7"
getrandom = { version = "0.2", default-features = false, features = ["js"] }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
hex = { version = "0.4.3", default-features = false }
hex-literal = "0.4.1"
wasm-bindgen = "0.2.87"
serde-wasm-bindgen = "0.6.3"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
log = "0.4"
console_error_panic_hook = "0.1"
console_log = { version = "1.0" }

smoldot = { path = '../vendor/smoldot/lib', default-features = false }
smoldot-light = { path = '../vendor/smoldot/light-base', default-features = false }
no-std-net = { version = "0.6.0", default-features = false }
futures-lite = { version = "2.0.0", default-features = false, features = ["alloc"]}
derive_more = "0.99.17"
event-listener = { version = "4.0.2", default-features = false }
nom = { version = "7.1.3", features = [] }
slab = { version = "0.4.9", features = [] }
fnv = { version = "1.0.7", default-features = false }
hashbrown = { version = "0.14.2", default-features = false }
pin-project = "1.1.3"
async-channel = { version = "2.1.1", default-features = false }

[features]
default = []
std = ["smoldot/std", "smoldot-light/std"]

[profile.release]
codegen-units = 1
lto = true
